# buutti

./: CMakeLists.txt  Deck.hpp  assignment.txt  main.cpp
tests/: deck_test.cpp
